# larc23

./: README.md  minu_su2.txt  minus_u2.txt  result.txt  u2.txt
CHALLENGE_DATA_DIR/: CHALLENGE_README  DATABASE_samples.list  PAIRWISE_RELATED_SUBJECTS.list  QUERY_samples.list
bgv_8192/: CMakeLists.txt  helper.h  main.cpp  matrix.h  setting.h  utils.cpp  utils.h
bgv_8192/larc_v2/: helper.h  main.cpp  matrix.h  setting.h  utils.cpp  utils.h
bgv_8192_omp/: helper.h  main.cpp  setting.h  utils.cpp  utils.h
challenge_data_preprocess/: database_sample_pairwise.txt  query_sample_pairwise.txt
model/: u.txt
src/: helper.h
submission_1/: CMakeLists.txt  main.cpp  matrix.h  setting.h  utils.cpp  utils.h
submission_2/: helper.h  main.cpp  matrix.h  setting.h  utils.cpp  utils.h
submission_2_updated/: CMakeLists.txt  helper.h  main.cpp  matrix.h  setting.h  utils.cpp  utils.h
test/: CMakeLists.txt  test_bfv.cpp
